infra/k8s/4-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app
  name: frontend-service
spec:
  ports:
    - port: 80
      targetPort: 3001
  selector:
    app: fontend
  type: ClusterIP
