infra/k8s/7-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: todo-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: cicd.deanosaur.com
      http:
        paths:
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /todos/:id
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
